# derive_destructure

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
derive_destructure2_examples/: Cargo.toml
derive_destructure2_examples/src/: examples.rs  lib.rs
derive_destructure2_examples_generated/: Cargo.toml
src/: lib.rs
tests/: droptest.rs  enum.rs  generic.rs  simple.rs  unit.rs
