[package]
name = "derive_destructure2"
version = "1.0.0"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT OR Apache-2.0"
description = "Destructure structs that implement Drop"
repository = "https://github.com/Migi/derive_destructure2"

keywords = ["derive", "destructure", "drop", "E0509", "remove_trait_impls", "no-std"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = "1"
quote = "1"
