[package]
name = "derive_destructure2"
version = "0.0.1"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT OR Apache-2.0"
description = "Destructure structs that implement Drop"
repository = "https://github.com/NobodyXu/derive_destructure2"

keywords = ["derive", "destructure", "drop", "E0509", "remove_trait_impls", "no-std"]
categories = ["no-std", "rust-patterns"]

[lib]
proc-macro = true

[workspace]
members = [
    "derive_destructure2_examples"
]

[dependencies]
proc-macro2 = "1"
syn = "1"
quote = "1"
