[package]
name = "derive_destructure2_examples"
version = "0.1.0"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT OR Apache-2.0"
description = "Examples for crate derive_destructure2"
repository = "https://github.com/NobodyXu/derive_destructure2"

keywords = ["example"]
categories = []

[package.metadata.docs.rs]
cargo-args = ["--document-private-items"]

[dependencies]
derive_destructure2 = { path = "..", version = "0.0.1" }
